validation + planification module

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Visual Builder</title>
+  <title>FST</title>
   <link rel="shortcut icon" href="<%= BASE_URL %>favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#ffffff" />
